--- a/app/views/messages/index.html.haml
+++ b/app/views/messages/index.html.haml
@@ -6,15 +6,15 @@
     .header
       .left-header
         .left-header__title
-          グループ
+          グループ名
         %ul.left-header__members
           Member：
           %li.member
-            satou
+            メンバー名
           %li.member
-            katou
+            メンバー名
           %li.member
-            itou
+            メンバー名
       .right-header
         .right-header__button
           Edit
@@ -22,22 +22,30 @@
       .message
         .upper-message
           .upper-message__user-name
-            satou
+            メンバー
           .upper-message__date
-            2020/05/15 09:00
+            2017/04/04
         .lower-meesage
           .lower-message__content
-            ohayou
+            メッセージ
       .message
         .upper-message
           .upper-message__user-name
-            katou
+            メンバー
           .upper-message__date
-            2020/05/15 09:10
+            2017/04/04
         .lower-meesage
           .lower-message__content
-            ohayou
-      
+            メッセージ
+      .message
+        .upper-message
+          .upper-message__user-name
+            メンバー
+          .upper-message__date
+            2017/04/04
+        .lower-meesage
+          .lower-message__content
+            メッセージ
     .form
       %form
         %input.form__message
