--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1,11 +1,13 @@
 @import "config/reset";
-@import "config/color.scss";
-@import 'font-awesome-sprockets';
-@import "font-awesome";
+@import "config/colors";
 @import "config/font-size";
 @import "mixins/vendor_prefix";
 @import "modules/side_bar";
 @import "modules/chat";
-@import "modules/messages";
+@import "messages/messages.scss";
+@import "font-awesome-sprockets";
+@import "font-awesome";
 @import "modules/user";
 @import "modules/flash";
+@import "modules/group";
+
