--- a/app/views/shared/_side_bar.html.haml
+++ b/app/views/shared/_side_bar.html.haml
@@ -1,27 +1,27 @@
 .side-bar
   .header
     %h3.header__name
-      = current_user.name
+      ユーザーネーム
     %ul.header__lists
       %li.list
-        = link_to do
+        = link_to '#' do
           = icon('fa', 'edit',class: 'icon')
       %li.list
-        = link_to edit_user_path(current_user) do
+        = link_to '#' do
           = icon('fa', 'cog',class: 'icon')
   .groups
     .group
       .group__name
-        A
+        グループ名
       .group__message
-        ohayou
+        新着メッセージ
     .group
       .group__name
-        B
+        グループ名
       .group__message
-        ohayou
+        新着メッセージ
     .group
       .group__name
-        C
+        グループ名
       .group__message
-        ohayou
+        新着メッセージ
