--- a/app/views/messages/_side_bar.html.haml
+++ b/app/views/messages/_side_bar.html.haml
@@ -5,15 +5,15 @@
     %ul.header__lists
       %li.list
         = link_to new_group_path do
-          = icon('fa', 'edit',class: 'icon')
+          = icon('fas', 'edit', class: 'icon')
       %li.list
-        = link_to edit_user_path(current_user.id) do
+        = link_to edit_user_path(current_user) do
           = icon('fas', 'cog', class: 'icon')
   .groups
     - current_user.groups.each do |group|
       .group
-        = link_to '#' do
+        = link_to group_messages_path(group) do
           .group__name
             = group.name
           .group__message
-            メッセージはまだありません。
+            = group.show_last_message
