--- a/app/assets/stylesheets/modules/group.scss
+++ b/app/assets/stylesheets/modules/group.scss
@@ -6,7 +6,7 @@ h1 {
 }
 h2 {
   margin-bottom: 10px;
-  color: #f05050;
+  color: #030303;
   font-size: 14px;
 }
 
@@ -94,7 +94,7 @@ li {
     float: left;
   }
   &__btn {
-    float: right;
+   
     display: inline-block;
     cursor: pointer;
     &--add {
