--- a/app/assets/stylesheets/modules/side_bar.scss
+++ b/app/assets/stylesheets/modules/side_bar.scss
@@ -1,19 +1,18 @@
 .side-bar {
-  box-sizing: border-box;
   color: $white;
   width: 300px;
+  float: left;
   .header {
     background-color: $side_blue_dark;
-    height: 100px;
-    line-height: 100px;
+    align-items: center;
     padding: 0 20px;
     &__name {
       display: inline-block;
       font-size: $side_header_font;
       font-weight: bold;
+      line-height: 100px;
     }
     &__lists {
-      display: inline-block;
       float: right;
       .list {
         display: inline-block;
@@ -21,6 +20,7 @@
       .icon {
         color: $white;
         font-size: $side_header_font;
+        line-height: 100px;
       }
     }
   }
@@ -28,10 +28,11 @@
   .groups {
     background-color: $side_blue_light;
     height: calc(100vh - 100px);
-    padding: 0 20px;
+    padding: 20px 20px 0;
+    overflow: scroll;
     .group {
       box-sizing: border-box;
-      padding: 20px 0 40px;
+      margin: 0 0 40px;
       &__name {
         color: $white;
         font-size: $side_group_name;
