--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1,10 +1,8 @@
-@import "config/reset";
+@import "reset";
 @import "config/colors";
 @import "config/font-size";
 @import "mixins/vendor_prefix";
-@import "modules/side_bar";
-@import "modules/chat";
-@import "messages/messages.scss";
+@import "modules/messages";
 @import "font-awesome-sprockets";
 @import "font-awesome";
 @import "modules/user";
